# rapid-gwm-build

./: .gitignore  CHANGELOG.md  README.md  documentation.ipynb  freyburg6.dis  freyburg6.ghb  freyburg6.ic  freyburg6.nam  freyburg6.npf  freyburg6.oc  freyburg6.rch  freyburg6.sfr  freyburg6.sfr.obs  freyburg6.sto  freyburg6.wel  mfsim.nam  pyproject.toml  ruff_check.txt  sim.ims  sim.tdis
examples/models/mf6_monthly_model_files_1lyr_newstress_input/: freyberg6.wel_stress_period_data_5.txt
examples/pakipaki/: client_code.py
examples/pleasant/: client_code.py  readme.txt  shellmound.yaml
examples/simple_freyburg/: client_code.py  freyberg6_simple.ims  freyberg6_simple.tdis  freyburg6.dis  freyburg6.ghb  freyburg6.ic  freyburg6.nam  freyburg6.npf  freyburg6.oc  freyburg6.rcha  freyburg6.sfr  freyburg6.sfr.obs  freyburg6.sfr.obs_continuous_sfr.csv.txt  freyburg6.sto  freyburg6.wel  freyburg_1lyr_stress.yaml  mfsim.nam
examples/simple_freyburg/data/: ghb.csv
notebooks/: example.ipynb  example.py  simple freyburg copy.yaml  simple freyburg.yaml
notebooks/data/models/: mfsim.nam  model.drn  model.nam  sim.ims  sim.tdis  test_sim.pkl
notebooks/simple_freyburg/: simple freyburg.yaml
src/rapid_gwm_build/: __init__.py  config_parser.py  factory.py  mesh.py  mf6_template.yaml  module.py  module_builder.py  module_registry.py  network_registry.py  pipe_utils.py  pipeline_node.py  pipes_example.py  registry.py  runners.py  simulation.py  simulation_builder.py  simulation_manager.py  template_loader.py  template_schema.py  utils.py  yaml_processor.py
src/rapid_gwm_build/io/: input_types.py  user_input_factory.py
src/rapid_gwm_build/nodes/: mesh_node.py  node.py  node_base.py  node_builder.py  node_cfg.py  node_types.py
src/rapid_gwm_build/parsers/: config_parser.py  node_parser.py  (+1 more)
(+44 files in other folders)
