[project]
name = "rapid-gwm-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taraaubrey", email = "tara.a.forstner@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cerberus>=1.3.7",
    "flopy==3.9.2",
    "modflow-setup>=0.6.1", #HACK: hardcoded for now (remove)
    "networkx>=3.4.2", #TODO: maybe remove if not using
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0", #HACK remove when remov modflow-setup
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
