[project]
name = "rapid-gwm-build"
version = "0.1.0"
description = "A Python package for building numerical groundwater models."
readme = "README.md"
authors = [
    { name = "taraaubrey", email = "tara.a.forstner@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cerberus>=1.3.7",
    "flopy==3.9.2", #TODO: remove hardcoded version (user only needs if using flopy)
    "gridit>=0.7",
    "modflow-setup>=0.6.1", #HACK: hardcoded for now (eventually will remove)
    "netcdf4>=1.7.2", #HACK: hardcoded for now (remove)
    "networkx>=3.4.2",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0", #HACK remove when remove modflow-setup
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
